<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:fitsSystemWindows="true"
              android:orientation="vertical">

    <com.sg.eyedoctor.common.view.MyActionbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:actionbar_title="@string/reset_password"
        app:rightBtn_visible="false"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <com.sg.eyedoctor.common.view.EditView
        app:is_password="true"
        android:id="@+id/old_password_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:left_name="@string/old_password"
        app:right_hint="@string/please_enter_old_password"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <com.sg.eyedoctor.common.view.EditView
        app:is_password="true"
        android:id="@+id/new_password_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:left_name="@string/new_password"
        app:right_hint="@string/please_enter_new_password"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <com.sg.eyedoctor.common.view.EditView
        app:is_password="true"
        android:id="@+id/again_password_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:left_name="@string/password_comfirm"
        app:right_hint="@string/please_enter_password_again"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"/>


    <TextView
        android:id="@+id/ensure_tv"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_blue_text_white"
        android:gravity="center"
        android:text="@string/post"
        android:textColor="@color/white"
        android:textSize="18sp" />

</LinearLayout>