<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".mySetting.SettingActivity">

    <com.sg.eyedoctor.common.view.MyActionbar
        app:actionbar_title="@string/setting"
        app:rightBtn_visible="false"
        android:id="@+id/actionbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.sg.eyedoctor.common.view.MenuTextView
        app:menu_text="@string/update_password"
        android:id="@+id/password_mtv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.sg.eyedoctor.common.view.MenuTextView
        app:menu_text="@string/update_version"
        android:id="@+id/version_mtv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.sg.eyedoctor.common.view.MenuTextView
        app:menu_text="@string/about_us"
        android:id="@+id/about_mtv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView

        android:id="@+id/ensure_tv"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_text_red"
        android:gravity="center"
        android:text="@string/exit"
        android:textColor="@color/white"
        android:textSize="18sp" />

</LinearLayout>
