<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
   >

    <com.sg.eyedoctor.common.view.MyActionbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:actionbar_title="@string/phone_valite"
        app:rightBtn_visible="false"/>

    <View
        style="@style/style_line"
        />

    <com.sg.eyedoctor.common.view.EditView
        android:id="@+id/phone_ev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:left_name="@string/phone_register"
        app:right_hint="@string/enter_register_phone"/>

    <View
        style="@style/style_line"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingLeft="12dp"
        android:paddingRight="10dp"
        >

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"/>

        <TextView

            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/register_authcode"
            android:textSize="@dimen/text_16"/>

        <EditText
            android:id="@+id/et_register_authcode"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/trans"
            android:hint="@string/enter_register_authcode"
            android:textColor="@color/text_body_strong"
            android:textColorHint="@color/text_body_weak"
            android:textSize="@dimen/text_16"/>

        <TextView
            android:id="@+id/tv_register_get_authcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_auth_green"
            android:paddingBottom="5dp"
            android:paddingLeft="11dp"
            android:paddingRight="11dp"
            android:paddingTop="5dp"
            android:text="@string/register_get_authcode"
            android:textColor="@color/white"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <View
        style="@style/style_line"
        />

    <TextView
        android:id="@+id/post_tv"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_blue_text_white"
        android:gravity="center"
        android:text="@string/post"
        android:textColor="@color/white"
        android:textSize="18sp"/>

</LinearLayout>
